manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxtjs
  namespace: architecture-review
spec:
  replicas: 2
  selector:
    matchLabels:
      app: architecture-review-nuxtjs
  template:
    metadata:
      labels:
        app: architecture-review-nuxtjs
    spec:
      nodeSelector:
        agentpool: user
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: architecture-review-nuxtjs
      containers:
      - name: architecture-review-nuxtjs
        image: cloudkubereviews.azurecr.io/frontend:${IMAGE_TAG}
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
          requests:
            cpu:  0.25
            memory: 256Mi
