manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architecture-review-service
  namespace: architecture-review
spec:
  type: ClusterIP
  selector:
    app: architecture-review-nuxtjs
  ports:
  - port: 80
    targetPort: 3000
