manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: architecture-review-ingress
  namespace: architecture-review
  labels:
    name: architecture-review-ingress
spec:
  rules:
  - host: ${INGRESS_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: architecture-review-service
            port:
              number: 80
